--- a/PostCovid2/app/src/main/res/layout/activity_login.xml
+++ b/PostCovid2/app/src/main/res/layout/activity_login.xml
@@ -34,6 +34,7 @@
         android:inputType="textPassword"
         android:selectAllOnFocus="true"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/username" />
 
